--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,5 @@
 {
-    "parser": "typescript"
+  "parser": "typescript",
+  "trailingComma": "es5",
+  "semi": [true, "never", "ignore-interfaces"]
 }
