--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "prettier-config-standard": "^5.0.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
+  "prettier": "prettier-config-standard",
   "private": true
 }
