--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "axios": "^0.27.2",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-webview": "^11.23.1",
+    "react-redux": "^8.0.4",
+    "styled-components": "^5.3.6",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
