--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,9 @@
   ],
   "rules": {
     "prettier/prettier": "error",
-    "@typescript-eslint/no-inferrable-types": "off"
+    "@typescript-eslint/no-inferrable-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
