--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "@typescript-eslint/no-inferrable-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
